app/src/test/resources/programs/invalid/RedefiningMutableVariable.extension
foo main() -> Int = {
    let mut x: Int = 42;
    let mut x: Int;
    x = 43;
}
